# JNI_Work

./: README.md
EppllDemo/: settings.gradle
EppllDemo/app/: build.gradle
EppllDemo/app/src/main/: AndroidManifest.xml
EppllDemo/app/src/main/cpp/: CMakeLists.txt  (+4 more)
EppllDemo/gradle/wrapper/: gradle-wrapper.properties
GenerateIntArray/: README.md  settings.gradle
GenerateIntArray/app/: build.gradle
GenerateIntArray/app/src/main/: AndroidManifest.xml
GenerateIntArray/gradle/wrapper/: gradle-wrapper.properties
NI_Thread/: settings.gradle
NI_Thread/app/: build.gradle
NI_Thread/app/src/main/: AndroidManifest.xml
NI_Thread/gradle/wrapper/: gradle-wrapper.properties
NativeMeidaPlayer/: settings.gradle
NativeMeidaPlayer/app/: build.gradle
NativeMeidaPlayer/app/src/main/: AndroidManifest.xml
NativeMeidaPlayer/app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  JNICallbackHelper.cpp  JNICallbackHelper.h  MediaPlayer.cpp  MediaPlayer.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp  util.h
NativeMeidaPlayer/gradle/wrapper/: gradle-wrapper.properties
NdkBitmap/: README.md  settings.gradle
NdkBitmap/app/: build.gradle
NdkBitmap/app/src/main/: AndroidManifest.xml
NdkBitmap/gradle/wrapper/: gradle-wrapper.properties
TestCPU/: settings.gradle
TestCPU/app/: build.gradle
TestCPU/app/src/main/: AndroidManifest.xml
TestCPU/gradle/wrapper/: gradle-wrapper.properties
mmap_demo/: settings.gradle
mmap_demo/app/: build.gradle
mmap_demo/app/src/main/: AndroidManifest.xml
mmap_demo/gradle/wrapper/: gradle-wrapper.properties
(+66 files in other folders)
